--- a/frontend/src/pages/SignUp.css
+++ b/frontend/src/pages/SignUp.css
@@ -20,8 +20,7 @@
 
 #sign-up-container input[type="text"],
 #sign-up-container input[type="password"],
-#sign-up-container input[type="email"],
-#sign-up-container input[type="submit"] {
+#sign-up-container input[type="email"] {
   width: 100%;
   padding: 10px;
   margin: 7px 0;
@@ -33,11 +32,15 @@
   font-size: 1rem;
 }
 
-#loginButton {
+#sign-up-container input[type="submit"] {
   background-color: var(--button-bg);
   color: var(--button-text);
   cursor: pointer;
   transition: 0.25s;
+  width: 60%;        
+  margin-top: 8px;
+  padding: 8px 0;    
+  border-radius: 10px;
 }
 
 #loginButton:hover {
